Add latest paper changes to ensure they aren't lost

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -1,4 +1,4 @@
-@misc{json,
+@misc{json_spec,
   series = {Request for Comments},
   number = 8259,
   howpublished = {RFC 8259},
@@ -20,7 +20,14 @@
               experience-based interoperability guidance.},
 }
 
-@misc{xml,
+@software{json_parser,
+  author = {Andrew Gallant (BurntSushi)},
+  title = {rust-csv},
+  url = {https://github.com/BurntSushi/rust-csv},
+  version = {1.2.2},
+}
+
+@misc{xml_spec,
   url = {https://www.w3.org/TR/2006/REC-xml11-20060816/},
   urldate = {2023-08-06},
   title = "Extensible Markup Language (XML) 1.1 (Second Edition)",
@@ -30,6 +37,17 @@
   editor = {Tim Bray and Jean Paoli and C. M. Sperberg-McQueen and Eve Maler and
             François Yergeau and John Cowan},
 }
+
+@software{xml_parser,
+  author = { Johann Tuffe (tafia)},
+  title = {quick-xml},
+  url = {https://github.com/tafia/quick-xml},
+  version = {0.30.0},
+}
+
+@misc{cbor_spec,
+}
+
 
 @misc{xbf_spec,
   url = {
@@ -66,5 +84,14 @@
 
 @misc{protobuf,
   title = {Protocol Buffers},
+  author = {Google},
   url = {https://protobuf.dev/},
 }
+
+@misc{sony_stock_data,
+  url = {},
+  author = {yahoo! Finance},
+  title = {SONY Stock History},
+  date = {2023-08-01},
+}
+
