--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -46,7 +46,7 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 \section{Introduction}
 
-On the web, data is largely interchanged in one of two formats, XML (Extensible Markup Language)\cite{xml} or JSON (JavaScript Object Notation)\cite{json}. These formats have two key features that have led to their popularity, human-readability and being self-describing. These features have inherent inefficiencies, which XBF (Xtensible Binary Format)\cite{xbf_spec} intends to solve by making compromises.
+On the web, data is largely interchanged in one of two formats, XML (Extensible Markup Language)\cite{xml_spec} or JSON (JavaScript Object Notation)\cite{json_spec}. These formats have two key features that have led to their popularity, human-readability and being self-describing. These features have inherent inefficiencies, which XBF (Xtensible Binary Format)\cite{xbf_spec} intends to solve through carefully chosen compromises.
 
 \subsection{Self-Description}
 
@@ -67,15 +67,25 @@ An additional optimization that could be made (but isn't with either of these fo
 
 A human-readable format is one where data is encoded entirely as ASCII or UTF-8 characters, and formatted in such a way that a person could easily read or write it without the need of a machine. Human-readability brings with it two inefficiencies, the need to parse text data into a binary format that a computer understands, and additional overhead from whitespace characters.
 
-\subsection{Enhancements to be Made}
+\subsection{Enhancements Made}
 
 With the inefficiencies of these two formats in mind, XBF seeks to improve on them through a few core design decisions:
 
 \begin{IEEEitemize}
-	\item Send data and metadata in a binary format (no longer human-readable)
-	\item Remain self-describing, but have the option to not include metadata if it's already known
-	\item Prioritize simplicity in the type system
+	\item Send data and metadata in a binary format (no longer human-readable).
+	\item Remain self-describing, but have the option to not include metadata if it's already known, and deduplicate metadata whenever possible.
+	\item Prioritize simplicity in the type system.
 \end{IEEEitemize}
+
+\section{Methodology and Implementation}
+
+\section{Results}
+
+\section{Discussion}
+
+\section{Conclusion}
+
+\section{}
 
 % \begin{table}[htbp]
 % 	\caption{Table Type Styles}
@@ -93,8 +103,6 @@ With the inefficiencies of these two formats in mind, XBF seeks to improve on th
 % 		\label{tab1}
 % 	\end{center}
 % \end{table}
-
-\section*{Acknowledgment}
 
 \bibliographystyle{IEEEtran}
 \bibliography{refs}
