--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -21,6 +21,21 @@
 }
 
 @software{json_parser,
+  author = {David Tolnay (dtolnay)},
+  title = {Serde JSON},
+  url = {https://github.com/serde-rs/json},
+  version = {1.0.104},
+}
+
+@misc{csv_spec,
+  author = {Y. Shafranovich},
+  title = {Common Format and MIME Type for Comma-Separated Values (CSV) Files},
+  url = {https://www.rfc-editor.org/rfc/rfc4180},
+  year = 2005,
+  month = oct,
+}
+
+@software{csv_parser,
   author = {Andrew Gallant (BurntSushi)},
   title = {rust-csv},
   url = {https://github.com/BurntSushi/rust-csv},
@@ -48,6 +63,13 @@
 @misc{cbor_spec,
 }
 
+@software{cbor_parser,
+  author = {},
+  title = {},
+  url = {},
+  version = {},
+}
+
 
 @misc{xbf_spec,
   url = {
@@ -60,18 +82,6 @@
   urldate = {2023-08-06},
 }
 
-@misc{format_comparison_data,
-  author = {David Krauthamer},
-  title = {Comparison of XBF With Other Self Describing Formats},
-  year = {2023},
-  month = {aug},
-  url = {
-         https://github.com/XtensibleBinaryFormat/XBF/blob/main/docs/format_comparison.md
-         },
-  urldate = {2023-08-06},
-  note = {?_note},
-}
-
 @misc{msgpack_spec,
   author = {?_author},
   title = {MessagePack specification},
@@ -80,6 +90,13 @@
   url = {https://github.com/msgpack/msgpack/blob/master/spec.md},
   urldate = {2023-08-06},
   note = {?_note},
+}
+
+@software{msgpack_parser,
+  author = {},
+  title = {},
+  url = {},
+  version = {},
 }
 
 @misc{protobuf,
