--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -33,6 +33,7 @@
   url = {https://www.rfc-editor.org/rfc/rfc4180},
   year = 2005,
   month = oct,
+  urldate = {2023-08-06},
 }
 
 @software{csv_parser,
@@ -54,20 +55,26 @@
 }
 
 @software{xml_parser,
-  author = { Johann Tuffe (tafia)},
+  author = {Johann Tuffe (tafia)},
   title = {quick-xml},
   url = {https://github.com/tafia/quick-xml},
   version = {0.30.0},
 }
 
 @misc{cbor_spec,
+  author = {C. Bormann and P. Hoffman},
+  url = {https://www.rfc-editor.org/rfc/rfc8949.html},
+  urldate = {2023-08-06},
+  title = {Concise Binary Object Representation (CBOR)},
+  year = 2020,
+  month = dec,
 }
 
 @software{cbor_parser,
-  author = {},
-  title = {},
-  url = {},
-  version = {},
+  author = {Enarx},
+  title = {ciborium},
+  url = {https://github.com/enarx/ciborium},
+  version = {0.2.1},
 }
 
 
@@ -75,7 +82,7 @@
   url = {
          https://github.com/XtensibleBinaryFormat/XBF/blob/main/docs/specification.md
          },
-  author = {David Krauthamer},
+  author = {David Krauthamer and Dov Kruger},
   title = {Xtensible Binary Format Specification},
   year = 2023,
   month = jul,
@@ -83,20 +90,19 @@
 }
 
 @misc{msgpack_spec,
-  author = {?_author},
+  author = {Sadayuki Furuhashi},
   title = {MessagePack specification},
   year = {2021},
   month = {apr},
   url = {https://github.com/msgpack/msgpack/blob/master/spec.md},
   urldate = {2023-08-06},
-  note = {?_note},
 }
 
 @software{msgpack_parser,
-  author = {},
-  title = {},
-  url = {},
-  version = {},
+  author = {Evgeny Safronov (3Hren)},
+  title = {RMP - Rust MessagePack},
+  url = {https://github.com/3Hren/msgpack-rust},
+  version = {1.1.2},
 }
 
 @misc{protobuf,
