--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -112,7 +112,9 @@
 }
 
 @misc{sony_stock_data,
-  url = {},
+  url = {
+         https://query1.finance.yahoo.com/v7/finance/download/SONY?period1=1659398400&period2=1690934400&interval=1d&events=history&includeAdjustedClose=true
+         },
   author = {yahoo! Finance},
   title = {SONY Stock History},
   date = {2023-08-01},
