--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -120,3 +120,14 @@
   date = {2023-08-01},
 }
 
+@software{xbf_impl,
+  title = {Xtensible Binary Format (XBF)},
+  author = {David Krauthamer},
+  url = {https://github.com/XtensibleBinaryFormat/XBF/tree/main/xbf_rs},
+  version = {0.1.0},
+} 
+
+@misc{digital_ocean,
+  title = {Droplets},
+  url = {https://docs.digitalocean.com/products/droplets/},
+}
