--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -8,6 +8,7 @@
 \usepackage{xurl}
 \usepackage{xcolor}
 \usepackage{listings}
+\usepackage{microtype}
 
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
 T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
