Update author section

--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -18,22 +18,16 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 \author{
 	\IEEEauthorblockN{David Krauthamer}
-	\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-		\textit{name of organization (of Aff.)}\\
-		City, Country \\
+	\IEEEauthorblockA{\textit{Electrical and Computer Engineering Department} \\
+		\textit{Stevens Institute of Technology}\\
+		Hoboken, USA \\
 		dkrautha@pm.me}
 	\and
 	\IEEEauthorblockN{Dov Kruger}
-	\IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-		\textit{name of organization (of Aff.)}\\
-		City, Country \\
-		email address or ORCID}
-	% \and
-	% \IEEEauthorblockN{3\textsuperscript{rd} Given Name Surname}
-	% \IEEEauthorblockA{\textit{dept. name of organization (of Aff.)} \\
-	% 	\textit{name of organization (of Aff.)}\\
-	% 	City, Country \\
-	% 	email address or ORCID}
+	\IEEEauthorblockA{\textit{Electrical and Computer Engineering Department} \\
+		\textit{Stevens Institute of Technology}\\
+		Hoboken, USA \\
+		dkruger@stevens.edu}
 }
 
 \maketitle
