--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -75,58 +75,63 @@ With the inefficiencies of these two formats in mind, XBF seeks to improve on th
 
 \section{Format Design}
 
-Should this section be here / how in depth should this go? Should this mainly just be a reference to the spec / the paper written by Dov, or should more be spoken about here?
-
-Similar to CSV (cite here?), we send a single header up front, followed by all of the data. For a primitive type there isn't much savings here, but there are massive savings with vectors and structs. With a vector the metadata is a discriminant indicating a vector is being sent, which is then follwed by the metadata for its internal type. This process continues recursively if the inner type (or any of its inner types) contains a vector or struct, ensuring that all metadata necessary to represent the data coming afterwards is received up front. The data is then sent in a single continuous block, something after this...
+Similar to CSV (cite here?), we send a single header up front, followed by all the data. For a primitive type there isn't much savings here, but there are massive savings with vectors and structs. With a vector the metadata is a discriminant indicating a vector is being sent, which is then followed by the metadata for its internal type. This process continues recursively if the inner type (or any of its inner types) contains a vector or struct, ensuring that all metadata necessary to represent the data coming afterward is received up front. The data is then sent in a single continuous block, something after this...
 
 \section{Implementation}
 
-The reference implementation for XBF\cite{xbf_impl} was written in Rust. Rust was chosen for the following reasons:
+The reference implementation for XBF\cite{xbf_impl} was written in Rust\cite{rust}. Rust was chosen for the following reasons:
 \begin{IEEEitemize}
 	\item Rust is statically typed and compiled, and allows for similarly efficient code generation to C/C++.
-	\item A powerful type system with tagged unions built in such that dynamic dispatch and virtual method tables weren't required.
-	\item Control over the allocation and de-allocation of memory.
-	\item Rust provides statically checked memory safety.
+	\item A powerful type system with tagged unions built-in\cite{enums} such that dynamic dispatch and virtual method tables weren't required, and structural pattern matching was used instead.
+	\item Rust provides statically checked memory safety through the concept of ownership\cite{ownership}.
+	\item A built-in testing system in the standard library\cite{testing}.
 \end{IEEEitemize}
 
-\subsection{Primitives}
+\subsection{Values}
 
-The implementation of primitives is a tagged union of all possible primitive types, mapping the XBF type to the Rust native equivalent as shown in Table \ref{type_map}. The exceptions are the 256 bit integer types, which do not have an analog, and are instead represented by an array of four unsigned 64 bit integers.
+At the top of the hierarchy of types is a generic value, named the XbfType. This is a tagged union of all possible types, consisting of Primitives (XbfPrimitive) \ref{primitives}, Vectors (XbfVec)
+\ref{vec}, and Structs (XbfStruct) \ref{struct}. The corresponding metadata is the XbfMetadata, a tagged union of metadata types of each of the aforementioned subtypes. In order to perform a downcast on either of these top level types, Rust's structural pattern matching must be used.
 
-Metadata for integers was an enumeration of the possible metadata discriminants, ranging from 0 to 16, represented as unsigned 8 bit integers.
+\subsection{XbfPrimitive}\label{primitives}
+
+The implementation of primitives is a tagged union of all possible primitive types, mapping the XBF type to the Rust native equivalent as shown in Table \ref{type_map}. The exceptions are the 256-bit integer types, which do not have an analog, and are instead represented by an array of four unsigned 64-bit integers.
 
 \begin{table}[htbp]
 	\caption{XBF Type Map}\label{type_map}
 	\begin{center}
-		\begin{tabular}{|c|c|}
+		\begin{tabular}{|c|c|c|}
 			\hline
-			\textbf{XBF Type} & \textbf{Rust Type}          \\
+			\textbf{XBF Type} & \textbf{Rust Type}          & \textbf{C++ Type}                   \\
 			\hline
-			Boolean           & bool                        \\
-			U8                & u8                          \\
-			U16               & u16                         \\
-			U32               & u32                         \\
-			U64               & u64                         \\
-			U128              & u128                        \\
-			U256              & [u64; 4]                    \\
-			I8                & i8                          \\
-			I16               & i16                         \\
-			I32               & i32                         \\
-			I64               & i64                         \\
-			I128              & i128                        \\
-			I256              & [u64; 4]                    \\
-			F32               & f32                         \\
-			F64               & f64                         \\
-			Bytes             & Vec\textless u8\textgreater \\
-			String            & String                      \\
+			Boolean           & bool                        & bool                                \\
+			U8                & u8                          & uint8\_t                            \\
+			U16               & u16                         & uint16\_t                           \\
+			U32               & u32                         & uint32\_t                           \\
+			U64               & u64                         & uint64\_t                           \\
+			U128              & u128                        & uint64\_t[2]                        \\
+			U256              & [u64; 4]                    & uint64\_t[4]                        \\
+			I8                & i8                          & int8\_t                             \\
+			I16               & i16                         & int16\_t                            \\
+			I32               & i32                         & int32\_t                            \\
+			I64               & i64                         & int64\_t                            \\
+			I128              & i128                        & uint64\_t[2]                        \\
+			I256              & [u64; 4]                    & uint64\_t[4]                        \\
+			F32               & f32                         & float                               \\
+			F64               & f64                         & double                              \\
+			Bytes             & Vec\textless u8\textgreater & std::vector\textless u8\textgreater \\
+			String            & String                      & std::string                         \\
 			\hline
 		\end{tabular}
 	\end{center}
 \end{table}
 
-\subsection{Vectors}
+Metadata for integers was an enumeration of the possible metadata discriminant values, ranging from 0 to 16, represented as unsigned 8-bit integers.
 
-\subsection{Structs}
+\subsection{XbfVec}\label{vec}
+
+XbfVec was implemented as native dynamic array of XbfType values, and a reference counted pointer to the metadata of its inner type. In order to ensure XbfVec remains homogenous, it requires the metadata to be passed in at construction time.
+
+\subsection{XbfStruct}\label{struct}
 
 \section{Evaluation}
 
@@ -155,12 +160,12 @@ The server was a DigitalOcean Droplet\cite{digital_ocean} running Ubuntu 20.04.5
 			\hline
 			\textbf{Format} & \textbf{Avg Time (ms)} & \textbf{Bytes Read} \\
 			\hline
-			CSV             & 18.931802              & 16411               \\
-			MessagePack     & 11.220957              & 15565               \\
-			CBOR            & 16.957873              & 25507               \\
-			JSON            & 21.912745              & 31180               \\
-			XML             & 21.873043              & 43699               \\
-			XBF             & 11.322245              & 14686               \\
+			CSV             & 18.93                  & 16,411              \\
+			MessagePack     & 11.22                  & 15,565              \\
+			CBOR            & 16.95                  & 25,507              \\
+			JSON            & 21.91                  & 31,180              \\
+			XML             & 21.87                  & 43,699              \\
+			XBF             & 11.32                  & 14,686              \\
 			\hline
 		\end{tabular}
 	\end{center}\label{time_and_bytes}
@@ -173,22 +178,24 @@ The server was a DigitalOcean Droplet\cite{digital_ocean} running Ubuntu 20.04.5
 			\hline
 			\textbf{Format} & \textbf{Overhead (bytes)} & \textbf{Percent Overhead} \\
 			\hline
-			CSV             & 1823                      & 11.1084                   \\
-			MessagePack     & 977                       & 6.2769                    \\
-			CBOR            & 10919                     & 42.8079                   \\
-			JSON            & 16592                     & 53.2136                   \\
-			XML             & 29111                     & 66.6171                   \\
-			XBF             & 98                        & 0.6673                    \\
+			CSV             & 1,823                     & 11.1                      \\
+			MessagePack     & 977                       & 6.22                      \\
+			CBOR            & 10,919                    & 42.8                      \\
+			JSON            & 16,592                    & 53.2                      \\
+			XML             & 29,111                    & 66.6                      \\
+			XBF             & 98                        & 0.67                      \\
 			\hline
 		\end{tabular}
 	\end{center}\label{overhead}
 \end{table}
 
-Original CSV data size recorded by the server: 17160 bytes.
+Original CSV data size recorded by the server: 17,160 bytes.
 
-Native data size recorded by the server: 14558 bytes.
+Native data size recorded by the server: 14,558 bytes.
 
 \section{Discussion}
+
+The results obtained indicate that there is still significant room for improvement in the formats used for data interchange. XBF performed significantly faster than all except one of the other formats tested, yet there has not been significant effort into optimizing the reference implementation's runtime performance. Additionally, XBF has the smallest overhead of the formats tested, indicating that it would make good choice for IOT (internet of things) systems which need to transfer data in a lower bandwidth scenario.
 
 \section{Conclusion}
 
