--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -131,3 +131,43 @@
   title = {Droplets},
   url = {https://docs.digitalocean.com/products/droplets/},
 }
+
+@software{rust,
+  title = {Rust},
+  url = {https://www.rust-lang.org/},
+  version = {1.71.0},
+}
+
+@software{tarpaulin,
+  title = {Tarpaulin},
+  url = {https://github.com/xd009642/tarpaulin},
+  version = {0.26.1},
+}
+
+@inbook{ownership,
+  title = {The Rust Programming Language},
+  url = {https://doc.rust-lang.org/book/ch04-00-understanding-ownership.html},
+  author = {Steve Klabnik and Carol Nichols},
+  chapter = 4,
+}
+
+@inbook{enums,
+  title = {The Rust Programming Language},
+  url = {https://doc.rust-lang.org/book/ch06-00-enums.html},
+  author = {Steve Klabnik and Carol Nichols},
+  chapter = 6,
+}
+
+@inbook{testing,
+  title = {The Rust Programming Language},
+  url = {https://doc.rust-lang.org/book/ch11-00-testing.html},
+  author = {Steve Klabnik and Carol Nichols},
+  chapter = 11,
+}
+
+  @inbook{results,
+  title = {The Rust Programming Language},
+  url = {https://doc.rust-lang.org/book/ch09-00-error-handling.html},
+  author = {Steve Klabnik and Carol Nichols},
+  chapter = 11,
+}
