--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -75,11 +75,11 @@ With the inefficiencies of these two formats in mind, XBF seeks to improve on th
 
 \section{Format Design}
 
-Similar to CSV (cite here?), we send a single header up front, followed by all the data. For a primitive type there isn't much savings here, but there are massive savings with vectors and structs. With a vector the metadata is a discriminant indicating a vector is being sent, which is then followed by the metadata for its internal type. This process continues recursively if the inner type (or any of its inner types) contains a vector or struct, ensuring that all metadata necessary to represent the data coming afterward is received up front. The data is then sent in a single continuous block, something after this...
+Similar to CSV (cite here?), we send a single header up front, followed by all the data. For a primitive type there isn't a large savings here, but there are massive savings with vectors and structs. With a vector the metadata is a discriminant indicating a vector is being sent, which is then followed by the metadata for its internal type. This process continues recursively if the inner type (or any of its inner types) contains a vector or struct, ensuring that all metadata necessary to represent the data coming afterward is received up front. The data is then sent in a single continuous block, something after this...
 
 \section{Implementation}
 
-The reference implementation for XBF\cite{xbf_impl} was written in Rust\cite{rust}. Rust was chosen for the following reasons:
+The reference implementation for XBF\cite{xbf_impl} is written in Rust\cite{rust}. Rust was chosen for the following reasons:
 \begin{IEEEitemize}
 	\item Rust is statically typed and compiled, and allows for similarly efficient code generation to C/C++.
 	\item A powerful type system with tagged unions built-in\cite{enums} such that dynamic dispatch and virtual method tables weren't required, and structural pattern matching was used instead.
@@ -102,37 +102,53 @@ The implementation of primitives is a tagged union of all possible primitive typ
 	\begin{center}
 		\begin{tabular}{|c|c|c|}
 			\hline
-			\textbf{XBF Type} & \textbf{Rust Type}          & \textbf{C++ Type}                   \\
+			\textbf{XBF Type} & \textbf{Rust Type}          & \textbf{C++ Type}                         \\
 			\hline
-			Boolean           & bool                        & bool                                \\
-			U8                & u8                          & uint8\_t                            \\
-			U16               & u16                         & uint16\_t                           \\
-			U32               & u32                         & uint32\_t                           \\
-			U64               & u64                         & uint64\_t                           \\
-			U128              & u128                        & uint64\_t[2]                        \\
-			U256              & [u64; 4]                    & uint64\_t[4]                        \\
-			I8                & i8                          & int8\_t                             \\
-			I16               & i16                         & int16\_t                            \\
-			I32               & i32                         & int32\_t                            \\
-			I64               & i64                         & int64\_t                            \\
-			I128              & i128                        & uint64\_t[2]                        \\
-			I256              & [u64; 4]                    & uint64\_t[4]                        \\
-			F32               & f32                         & float                               \\
-			F64               & f64                         & double                              \\
-			Bytes             & Vec\textless u8\textgreater & std::vector\textless u8\textgreater \\
-			String            & String                      & std::string                         \\
+			Boolean           & bool                        & bool                                      \\
+			U8                & u8                          & uint8\_t                                  \\
+			U16               & u16                         & uint16\_t                                 \\
+			U32               & u32                         & uint32\_t                                 \\
+			U64               & u64                         & uint64\_t                                 \\
+			U128              & u128                        & uint64\_t[2]                              \\
+			U256              & [u64; 4]                    & uint64\_t[4]                              \\
+			I8                & i8                          & int8\_t                                   \\
+			I16               & i16                         & int16\_t                                  \\
+			I32               & i32                         & int32\_t                                  \\
+			I64               & i64                         & int64\_t                                  \\
+			I128              & i128                        & uint64\_t[2]                              \\
+			I256              & [u64; 4]                    & uint64\_t[4]                              \\
+			F32               & f32                         & float                                     \\
+			F64               & f64                         & double                                    \\
+			Bytes             & Vec\textless u8\textgreater & std::vector\textless uint8\_t\textgreater \\
+			String            & String                      & std::string                               \\
 			\hline
 		\end{tabular}
 	\end{center}
 \end{table}
 
-Metadata for integers was an enumeration of the possible metadata discriminant values, ranging from 0 to 16, represented as unsigned 8-bit integers.
+Metadata for integers is an enumeration of the possible primitive metadata discriminant values, ranging from 0 to 16, represented as unsigned 8-bit integers.
 
 \subsection{XbfVec}\label{vec}
 
-XbfVec was implemented as native dynamic array of XbfType values, and a reference counted pointer to the metadata of its inner type. In order to ensure XbfVec remains homogenous, it requires the metadata to be passed in at construction time. If all of the values given to the constructor do not have the same metadata as the metadata passed in, the constructor returns an
+XbfVec is implemented as a native dynamic array of XbfType values, and a Rc (reference counted, shared pointer) to the metadata of its inner type, represented as the base XbfMetadata. In order to ensure XbfVec remains homogenous, it requires the metadata to be passed in at construction time. If all the values given to the constructor do not have the same metadata as the metadata passed in, the constructor returns an error type.
+
+The metadata is implemented with a Rc because Rust's tagged unions are not allowed to be recursive, as then they could be infinitely sized on the stack. A pointer type has a known sized value, and as such the tagged union can then be created on the stack by the compiler. The recursion comes from the base XbfMetadata type, which can contain XbfVecMetadata, which contains an XbfMetadata, and the recursion can continue.
+
+XbfVecMetadata could have been implemented with an owning pointer (known as a Box\textless T\textgreater), however that would mean that the metadata couldn't be shared among many instances of an object. When XbfVec is deserialized, it passes the internal metadata to each of the inner values it deserializes and constructs, which causes the reference count to increase and all the inner values to share the same heap allocated metadata. While this does not affect the on the wire performance, this does reduce memory usage for a user of the library.
 
 \subsection{XbfStruct}\label{struct}
+
+XbfStruct is implemented in a very similar manner to XbfVec, consisting of a Rc to the metadata of the struct, and a Box\textless [XbfType]\textgreater\space containing the fields. This type is known as a boxed slice. In Rust, a slice is a pair of a pointer to contiguous memory and a length. When a slice is boxed, it is allocated on the heap, and the box object is the sole owner of that heap allocation, and will de-allocate it when the box goes out of scope. The reason a boxed slice was chosen instead of a dynamic array was to save on memory usage.
+
+A Vec\textless T\textgreater (dynamic array) in Rust consists of a pointer to memory, a capacity of how much memory is available at that address, and a length of how many elements have been properly initialized. The amount of fields of a struct are not allowed to change, so a boxed slice can be used instead of a dynamic array, thereby saving the size of a pointer of memory for every XbfStruct created.
+
+The metadata of structs (XbfStructMetadata) is the most complex of the three metadata types. It consists of boxed string slice and an IndexMap\cite{indexmap} mapping string slices to XbfMetadata types.
+
+In Rust there is an important distinction between an owned String, and a string slice\cite{strings}. A string slice is similar to the previously mentioned slices, except it consists of valid UTF-8 code points. It is a view into a block of memory, and its size cannot be modified. If growable string is required, that's where the String type is used. It makes the same UTF-8 guarantee as a string slice, but has the same properties as a Vec where it keeps track of its capacity, will reallocate if its capacity is exceeded, similar to a dynamic array. As with the decision to use a slice in XbfStruct, a string slice is utilized to save on memory usage, as the metadata for a struct shouldn't need to change, thereby making a capacity field irrelevant.
+
+An IndexMap is a hash table with consistent order and fast iteration. Ordinarily a hash table does not keep track of the order it's fields are inserted, which is a problem when serializing the metadata, as the fields could be sent in any order. A dynamic array of objects consisting of the field name and type could be used, however this leads to $O(n)$ searches for a given field. In order to retain $O(1)$ searches, an IndexMap was used. It requires extra memory overhead to keep track of the insertion order of keys and values, but ensures that iteration is fast and in a consistent order.
+
+\subsection{Testing}\label{testing}
 
 \section{Evaluation}
 
@@ -196,9 +212,13 @@ Native data size recorded by the server: 14,558 bytes.
 
 \section{Discussion}
 
-The results obtained indicate that there is still significant room for improvement in the formats used for data interchange. XBF performed significantly faster than all except one of the other formats tested, yet there has not been significant effort into optimizing the reference implementation's runtime performance. Additionally, XBF has the smallest overhead of the formats tested, indicating that it would make good choice for IOT (internet of things) systems which need to transfer data in a lower bandwidth scenario.
+XBF performed significantly faster than all except one of the other formats tested, despite minimal effort spent optimizing the reference implementation's runtime performance. Additionally, XBF has the smallest overhead of the formats tested, indicating that it would make a good choice for IOT (internet of things) systems which need to transfer data in a low bandwidth scenario. Based on the overall
 
 \section{Conclusion}
+
+The results obtained indicate that there is still significant room for improvement in the formats used for data interchange. The primary technique of metadata deduplication shows the overhead of sending self-describing data can be reduced greatly. This technique could also be applied to a human-readable format such as JSON or XML, and would provide similar benefits even if the data is transferred as text instead of binary.
+
+In the self-describing binary format space, there are still many improvements that could be made in the future to XBF. Sizes for variable length
 
 \bibliographystyle{IEEEtran}
 \bibliography{refs}
