--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -138,6 +138,13 @@
   version = {1.71.0},
 }
 
+@software{indexmap,
+  title = {IndexMap},
+  author = {},
+  url = {https://github.com/bluss/indexmap/tree/master},
+  version = {2.0.0},
+}
+
 @software{tarpaulin,
   title = {Tarpaulin},
   url = {https://github.com/xd009642/tarpaulin},
@@ -148,6 +155,8 @@
   title = {The Rust Programming Language},
   url = {https://doc.rust-lang.org/book/ch04-00-understanding-ownership.html},
   author = {Steve Klabnik and Carol Nichols},
+  year = 2015,
+  month = dec,
   chapter = 4,
 }
 
@@ -155,6 +164,8 @@
   title = {The Rust Programming Language},
   url = {https://doc.rust-lang.org/book/ch06-00-enums.html},
   author = {Steve Klabnik and Carol Nichols},
+  year = 2015,
+  month = dec,
   chapter = 6,
 }
 
@@ -162,6 +173,8 @@
   title = {The Rust Programming Language},
   url = {https://doc.rust-lang.org/book/ch11-00-testing.html},
   author = {Steve Klabnik and Carol Nichols},
+  year = 2015,
+  month = dec,
   chapter = 11,
 }
 
@@ -169,5 +182,15 @@
   title = {The Rust Programming Language},
   url = {https://doc.rust-lang.org/book/ch09-00-error-handling.html},
   author = {Steve Klabnik and Carol Nichols},
-  chapter = 11,
+  year = 2015,
+  month = dec,
+  chapter = 9,
+}
+
+@inbook{strings,
+  author = {Steve Klabnik and Carol Nichols},
+  title = {The Rust Programming Language},
+  chapter = {8.2},
+  year = 2015,
+  month = dec,
 }
